# chas-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/jobs/: __init__.py  daily_reset.py  daily_sunset.py  scheduler.py  tip_to_tip_expiry.py  weekly_jashn.py
app/routers/: __init__.py  auth.py  balance.py  chamber.py  communities.py  declarations.py  elections.py  leaderboard.py  ledger.py  members.py  notifications.py  sunset.py
app/schemas/: chamber.py  community.py  election.py  invite.py  leaderboard.py  ledger.py  notification.py  user.py
app/services/: __init__.py  borrow_service.py  cc_service.py  chamber_service.py  common.py  community_service.py  declaration_service.py  election_service.py  invite_service.py  leaderboard_service.py  ledger_service.py  member_service.py  notification_service.py  sunset_service.py  tip_to_tip_service.py
app/utils/: errors.py  supabase_client.py  time.py
scripts/: generate_invite_codes.py
supabase/: delete_user_by_email.sql  reset_all_data.sql  reset_invite_code.sql
supabase/migrations/: 001_initial_schema.sql  002_invite_codes.sql  003_borrow_transfer_and_realtime.sql  004_tip_to_tip_proposals_realtime.sql  005_tip_to_tip_stake_and_active_guardrails.sql  006_declaration_dynamic_max.sql
tests/: __init__.py  conftest.py  test_health.py  test_invite_service.py  test_member_service.py  test_time_utils.py
